--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 .vscode
 test
+style/cart.css.map
+style/catalog.css.map
+style/mainpage.css.map
+style/product.css.map
+style/reg.css.map
